Update 'dz2luinja-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:1ac14320e1745a814c98de293daee31fa02df109@sha256:c1d8efbc9e93d092731332702bded74cdf8601d058ffb9e377f8cbc58cbeb201

--- a/components/dz2luinja-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/dz2luinja-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dz2luinja-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:1ac14320e1745a814c98de293daee31fa02df109@sha256:c1d8efbc9e93d092731332702bded74cdf8601d058ffb9e377f8cbc58cbeb201
+          name: container-image
